fix: z-index of logo

--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -6,7 +6,7 @@
   padding: 11px;
   z-index: 999;
   img {
-    z-index: 9999999;
+    z-index: 999999;
   }
   &__innerWrapper {
     max-width: 1200px;
